src/main/java/org/br/com/test/model/error/field/ApiErrorDetail.java
package org.br.com.test.model.error.field;

import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
import lombok.*;

@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@Builder
@JsonIgnoreProperties(ignoreUnknown = true)
public class ApiErrorDetail {
    private String msg;
    private String param;
    private String location;
} 